-Eye lasher and living eye lasher now have a longer cooldown period before they can reduce an enemies defense again
-Reduced the screen shaking intensity when the living flesh mincer strikes the ground, removed its bleed ability, and it has a new ability where it flings up eyes when striking the ground


Shimmer Transmutations:

(The -> is meant to show one item turning into another)

-Spooky Buster -> Ghostly Slingshot -> Rod of Hands -> Spooky Scroll -> goes back to Spooky Buster
-Spirit Horseman's Pumpkin -> Spirit Horseman's Chestmail -> Spirit Horseman's Greaves -> back to Spirit Horseman's Pumpkin
-Snot Ball -> Booger Blaster -> Snot-Nosed Tome -> Sneeze Scepter -> goes back to Snot Ball
-Skull Smasher -> Flower Shot -> Flame Orb Staff -> Skull Totem Scepter -> goes back to Skull Smasher


Enemy & Boss Changes:

-Added pitch variance to many of the custom enemy and boss sounds in the mod
-Lowered the orange spooky ghost critter spawnrate
-Nerfed giant tortumor contact damage from 65 to 40
-Added new sprites for big bone's thorn attack projectiles
-Added new color effect for big bone's phase transition forcefield, it will now fade between yellow and orange
-Defeating big bone will now automatically unlock the catacomb guardian's bestiary entry
-Made orro & boro's thorn pillars taller
-Moco and orro-boro will now drop one sentient heart for each active player in the world on the first defeat, instead of only one
-Added a new spawn intro for rot gourd when he is summoned, where he will fall from the sky and slam down where you summoned him from
-Added new sound effects for the cowbell entity
-Small fuzz bats will no longer spawn in the underground spooky forest, and increased the spawnrate of giant fuzz bats in the underground spooky forest
-Various enemies in the mod have been given debuff immunities (There are far too many to list here)


Miscellaneous:

-Spooky mod's pylons now give off colored lighting like vanilla ones do