@@ -18,7 +18,7 @@ namespace Spooky.Content.Items.SpookyHell
         public override void SetDefaults()
         {
             Item.damage = 30;
-            Item.mana = 10;
+            Item.mana = 5;
 			Item.DamageType = DamageClass.Magic;
             Item.noMelee = true;
             Item.channel = true;
